--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
     "name": "HR System for Workers",
     "icons": [
       {
-        "src": "icons/icon-192x192.png",
+        "src": "icons/7.jpg",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/jpg"
       }
     ],
     "start_url": "/index.html",
